--- a/C6-L01.qmd
+++ b/C6-L01.qmd
@@ -20,17 +20,19 @@ the following material is based on the [Gaussian Processes for Regression](https
 
 ## Why GPs
 
-::: {#fig-nonparametrics-gps1}
-![why GP1](C6-SL01.png){ .column-margin group="slides" width="53mm"}
+::: {#fig-nonparametrics-gps_1 .column-margin  group="slides" width="53mm"}
+![why GP1](C6-SL01.png)
 
 ocean current vector field [Ryan, Özgökmen 2023; Zewe 2023; Gonçalves et al 2019; Lodise et al 2020; Berlinghieri et al 2023]
 :::
 
-::: {#fig-nonparametrics-gps2}
-![why GP2](C6-SL02.png){ .column-margin group="slides" width="53mm"}
+
+::: {#fig-nonparametrics-gps_2 .column-margin  group="slides" width="53mm"}
+![why GP2](C6-SL02.png)
 
 rocket booster surrogate model [Gramacy,Lee 2008] [Gramacy 2020]
 :::
+
 
 - Why Gaussian processes (GPs)?
 - Example 1:
@@ -66,14 +68,13 @@ rocket booster surrogate model [Gramacy,Lee 2008] [Gramacy 2020]
   - Module in more-complex methods
 
 ::: {.callout-important icon=false}
-#### ⚡ Overthinking parameters in Bayesian non-parametric models
 
+#### ⚡ Overthinking parameters in Bayesian nonparametric models
 
+- Let's talk about the elephant in the room nonparametrics do have parameters!
+- The classical form of a distribution based on a few fixed number parameters is replaced in these by a notion similar to a euclidean line which can be arbitrary extended. This is the nature of the **nonparametric** parameter vector $\theta$.
 
-- Let's talk about the elephant in the room non-parametrics do have parameters!
-- The classical form of a distribution based on a few fixed number parameters is replaced in these by a notion similar to a euclidean line which can be arbitrary extended. This is the nature of the **non-parametric** parameter vector $\theta$.
-
-- To make the analogy more precise and what the above and many examples illustrate is that we often are interested in some behavior Y but as we get more and more data X, we will notice that there are new types of behavior that we did not observe earlier.
+- To make the analogy more precise and what the above and many examples illustrate is that we often are interested in some behavior $Y$ but as we get more and more data $X$, we will notice that there are new types of behavior that we did not observe earlier.
 
 :::
 
@@ -107,7 +108,7 @@ $$
 \underbrace{
   \mathbb{P}r(unknowns \mid data) }_{
     \substack{
-      \text{Given the data we’ve seen} \\ 
+      \text{Given the data we've seen} \\ 
       \text{what do we know about } \\ 
       \text{the underlying function?} 
     }
@@ -135,8 +136,8 @@ $$
 - with $\mu = [0,0]^\top$ and $k = \sigma^2 \begin{bmatrix} 1 & \rho \\ \rho & 1\end{bmatrix}$ where $\rho$ is the correlation between the two dimensions.
 - What if we let the correlation $\rho$ depend on the input $x$?
   - Let $\rho(x)= \rho(\mid x^{(1)} - x^{(2)} \mid)$
-  - Where the correlation goes to 1 as the x’s get close
-  - And goes to 0 as the x’s get far
+  - Where the correlation goes to 1 as the x's get close
+  - And goes to 0 as the x's get far
 
 - Next: Use a Similar setup but an M-long Gaussian instead of just a bivariate
   - We have M locations (need not be in order): $X^{(m)} \in \mathbb{R}^d$
@@ -285,7 +286,7 @@ we just drew random functions from a type of "Gaussian process"!
   - Covariance function (a.k.a. kernel) $k(x,x')=\mathbb{E}[(f(x) - m(x))(f(x') - m(x'))]$
   -  A common default (e.g. in software) is $m(x)=0$
   - One very commonly used covariance function is the squared exponential or radial basis function (RBF)
-  - We’ll see a more general form later, but for now we’re using: $k(x, x') = \sigma^2 \exp\left(-\frac{1}{2} \|x - x'\|^2\right)$
+  - We'll see a more general form later, but for now we're using: $k(x, x') = \sigma^2 \exp\left(-\frac{1}{2} \|x - x'\|^2\right)$
   - For now, assume data is observed without noise
 
 Let's look at a draw from the Gaussian process, i.e. we are just generating synthetic data from the Gaussian process model.
@@ -352,11 +353,11 @@ output = plt.title(str(Nobs) + " simulated data points") # make the plot
 ![](C6-SL07.png){#fig-nonparametrics-dimension-item .column-margin group="slides" width="53mm"}
 
 
-- Let’s be careful to separate two types of “dimension” 
-  - We’re using a superscript $y^{(1)}$ to denote (M or N) number of points in the space
-  - We’ll use a subscript for the (D) different elements of a point’s vector
-- Note: all of our real-life examples from the start had number of inputs D > 1
-- D = 1 is much easier to visualize, but might not be representative.
+- Let's be careful to separate two types of "dimension" 
+  - We're using a superscript $y^{(1)}$ to denote (M or N) number of points in the space
+  - We'll use a subscript for the (D) different elements of a point's vector
+- Note: all of our real-life examples from the start had number of inputs $D > 1$
+- $D = 1$ is much easier to visualize, but might not be representative.
 
 ## Inference about Unknowns given data.
 
@@ -364,7 +365,7 @@ output = plt.title(str(Nobs) + " simulated data points") # make the plot
 - Let $X$ collect the N "training" data points (indexed 1 to N)
 - Let $X'$ collect the M "test" data points $X: N\times D$
   - Where we want to evaluate the function 
-  - Indexed N+1:N+M
+  - Indexed $N+1:N+M$
 - $K(X,X')$ os the $N \times M$ matrix with (n,m) entry $k(x^{(n)}, x^{(N+m)})$
 - Then by our model (dimension are annotated in blue)
 $$
@@ -484,7 +485,7 @@ plotout = plt.title("Random draws of f from the predictive distribution")
 
 Now we have these four data points. And so we've constrained our random draws of the functions to go through the four data points.
 
-And here are just three draws from it. Because again, it's just a multivariate Gaussian is all that we're doing here. We're just making this multivariate Gaussian the same way we did before by having draws at many dense x values at many dense input values. And so we can do the same thing here. It's just a different multivariate Gaussian.
+And here are just three draws from it. Because again, it's just a multivariate Gaussian is all that we're doing here. We're just making this multivariate Gaussian the same way we did before by having draws at many dense $x$ values at many dense input values. And so we can do the same thing here. It's just a different multivariate Gaussian.
 
 This is meant to express Our uncertainty and our best guess, our best guess could be seen as this mean This posterior mean. So these are the mean predictions this solid green line. So that could be thought of as our best guess. And then our uncertainty around that
 
@@ -494,7 +495,7 @@ Is the plus or minus two standard deviation interval conditional on the data tha
 
 What if we happened to measure our data on a different scale? 
 
-We’ve been using this particular kernel:
+We've been using this particular kernel:
 
 $$
 \begin{align*}
@@ -502,13 +503,15 @@ k(x, x') = \sigma^2 \exp\left(-\tfrac{1}{2}(x - x')^2\right), \sigma^2 = 1
 \end{align*}
 $$
 
-  - What do we expect from the scale of f(x) a priori?
-    - At one x, with ~95% probability a priori,f(x) is in the interval $[-2\sigma,2\sigma]$.
+  - What do we expect from the scale of $f(x)$ a priori?
+    - At one $x$, with $~95%$ probability a priori, $f(x)$ is in the interval $[-2\sigma, \sigma]$.
     - Marginal variance cannot increase with data
-  - What counts as “close” in x?
+  - What counts as "close" in x?
 
 $$
-\exp(-\tfrac{1}{2}(2)^2) \approx 0.14 \quad \exp(-\tfrac{1}{3}(3)^2) \approx 0.11 \quad  \exp(-\tfrac{1}{2}(4)^2) \approx 0.0034 \qquad 
+\exp(-\tfrac{1}{2}(2)^2) \approx 0.14 \quad 
+\exp(-\tfrac{1}{3}(3)^2) \approx 0.11 \quad 
+\exp(-\tfrac{1}{2}(4)^2) \approx 0.0034 \quad 
 $$
 
 
@@ -652,6 +655,7 @@ plt.xlim([xstart,xstop]); plt.ylim((-3*signal_stddev,3*signal_stddev)); pltaxes 
 output = plt.title(str(Nobs) + " simulated data points") # make the plot
 ```
 
+
 ```{python}
 #| label: fig-demo3-gp-algorithm
 #| fig-cap: "GP scaled by the algorithm"
@@ -699,16 +703,16 @@ Always ask: What uncertainty are we quantifying? ^[This is key as in real life t
 
 ## Observation noise
 
-- So far we’ve been assuming that we observed f(x) directly
-- But often the actual observation y has additional noise:
+- So far we've been assuming that we observed $f(x)$ directly
+- But often the actual observation $y$ has additional noise:
 
 $$
-f \sim \mathcal{GP}(m, k) \quad y^{(n)} = f(x) + \epsilon^{(n)}, \qquad \epsilon^{(n)} \stackrel{iid}{\sim} \mathcal{N}(0, \tau^2)
+f \sim \mathcal{GP}(m, k) \qquad y^{(n)} = f(x) + \epsilon^{(n)}, \qquad \epsilon^{(n)} \stackrel{iid}{\sim} \mathcal{N}(0, \tau^2)
 $$
 
 - we observe $\{(x^{(n)}, y^{(n)})\}_{n=1}^N$ and want to learn the latent $f$
   - The $y$ are multivariate-Gaussian distributed with mean and covariance summed.
-  - The mean of $y^{(n)}$ is given by the function $m(x^{(n)})$. and $Cov(y^{(n)},y^{(n')})=k(x^{(n)},x^{(n')})+\tau^2\mathbb{1}_{n=n'}$
+  - The mean of $y^{(n)}$ is given by the function $m(x^{(n)})$. and $\mathbb{C}ov[y^{(n)},y^{(n')}]=k(x^{(n)},x^{(n')})+\tau^2\mathbb{1}_{n=n'}$
   - The covariance is given by the kernel function:
 
 $$
@@ -754,11 +758,11 @@ f(X')
 $$
 
 
-## What uncertainty are we quantifying?
+## What uncertainty are we quantifying? {#sec-what-uncertainty}
 
-- It’s worth being aware that data science (ML/stats/AI) often overloads common colloquial terms with terms of art
-  - E.g. “significance”, “bias”, “generalization”
-  - Every precise use of “uncertainty” has this issue
+- It's worth being aware that data science (ML/stats/AI) often overloads common colloquial terms with terms of art
+  - E.g. "significance", "bias", "generalization"
+  - Every precise use of "uncertainty" has this issue
     - E.g. frequentist sampling, Bayesian, etc.
   - We should always make sure we can distinguish what is,
 and what is not, covered by the term of art
@@ -767,7 +771,7 @@ and what is not, covered by the term of art
   - We fit the hyperparameters (the signal variance, the length scale(s), and the noise variance) to single values
   - The reported uncertainties are what result when the GP model and fitted hyperparameters are exactly correct
   
-  [Are there other uncertainties that aren’t being quantified here?]{.column-margin}
+[Are there other uncertainties that aren't being quantified here?]{.column-margin}
 
 ## Some other sources of uncertainty {#sec-other-sources-of-uncertainty}
 
@@ -778,35 +782,29 @@ consistent with the observed data
   - Multiple random restarts: plot the results
   - Bayesian model of the hyperparameters
 - A GP with your mean & kernel may be meaningfully misspecified for the data
-  - Box: “All models are wrong, but some are useful”
-  - What can we do? First: unit test, plot, sense check!
+  - Box: "All models are wrong, but some are useful"
+  - What can we do? 
+    - First: unit test, plot, sense check!
     - Can change the mean and/or kernel
-      - E.g. local/heteroskedastic models, periodic kernels, linear mean function, many many more
+      - E.g. local/heteroskedastic models, periodic kernels, linear mean function, many many more.
 
 ## Extrapolation {#sec-extrapolation}
 
-Extrapolation: Estimation/prediction beyond the observed
-data
-• Compare to interpolation: estimation/prediction within the
-observed data
-• When using GPs with a squared exponential kernel:
-• Data points that are more than a handful of length scales
-from other data points will revert to prior behavior
-• Note: extrapolation isn’t a special issue unique to GPs. It’s a
-fundamentally hard problem for all data analysis methods
-• To extrapolate, you need to make assumptions
-• When you have domain knowledge of a system, you
-might be able to use it to extrapolate
-• When you’re letting a machine learning method use its
-defaults, it’s making assumptions. Do you know what
-those assumptions are?
+- Extrapolation: Estimation/prediction beyond the observed data
+- Compare to interpolation: estimation/prediction within the observed data
+- When using GPs with a squared exponential kernel:
+- Data points that are more than a handful of length scales from other data points will revert to prior behavior
+- Note: extrapolation isn't a special issue unique to GPs. It's a fundamentally hard problem for all data analysis methods
+- To extrapolate, you need to make assumptions
+- When you have domain knowledge of a system, you might be able to use it to extrapolate
+- When you're letting a machine learning method use its defaults, it's making assumptions. Do you know what those assumptions are?
 
 ## More than one input
 
 ![histogram of squared inter-point distances](C6-SL09.png){#fig-multiple-inputs .column-margin group="slides" width="53mm"}
 
 - Our illustrations have almost all been for one input so far
-- But in real life, it’s typical to have more than one input
+- But in real life, it's typical to have more than one input
 - What could go wrong? Previous lessons apply, but also:
   - Possibly different length scales. Check defaults.
   - Regression in high dimensions is a fundamentally hard problem (without additional assumptions)
@@ -825,3 +823,4 @@ those assumptions are?
       - Each approximation has pros and cons 
 - Bayesian optimization inherits many of the pros and cons of Gaussian processes for regression
   - Exercise: once you learn about Bayesian optimization, think about how the pros and cons we discussed together might translate there
+
