--- a/references.bib
+++ b/references.bib
@@ -1633,3 +1633,24 @@ note = "Accessed 11/02/16",
       primaryClass={stat.ML},
       url={https://arxiv.org/abs/1807.02811}, 
 }
+
+@article{hewitt1955symmetric,
+  note = {The zero-one law for symmetric measures extending De Finetti's Theorem},
+  title={Symmetric measures on Cartesian products},
+  author={Hewitt, Edwin and Savage, Leonard J},
+  journal={Transactions of the American Mathematical Society},
+  volume={80},
+  number={2},
+  pages={470--501},
+  year={1955},
+  publisher={JSTOR}
+}
+
+@inproceedings{aldous1983random,
+  title={Random walks on finite groups and rapidly mixing Markov chains},
+  author={Aldous, David},
+  booktitle={S{\'e}minaire de Probabilit{\'e}s XVII 1981/82: Proceedings},
+  pages={243--297},
+  year={1983},
+  organization={Springer}
+}
