--- a/C6-L02.qmd
+++ b/C6-L02.qmd
@@ -22,25 +22,7 @@ the following material is based on the [Gaussian Processes for Regression](https
 - Bayesian statistics that is not parametric
 - Bayesian:
 $$ 
-\underbrace{
-  \mathbb{P}r(parameters \mid data) }_{
-    \substack{
-      \text{Given the data we’ve seen} \\ 
-      \text{what do we know about } \\ 
-      \text{the underlying function?} 
-    }
-  }
-\propto 
-\underbrace{
-  \mathbb{P}r(data \mid parameters) 
-  \mathbb{P}r(parameters)}_{  
-    \substack{
-      \text{A (statistical) model} \\
-      \text{that can generate} \\
-      \text{functions and data} \\
-      \text{of interest}
-    }
-  }
+  \mathbb{P}r(parameters \mid data) \propto \mathbb{P}r(data \mid parameters) \mathbb{P}r(parameters)
 $$
 
 - Not parametric (i.e. not finite parameter, unbounded/growing/infinite number of parameters)
@@ -52,12 +34,11 @@ $$
   - survival analysis curves
   - Fitness exercises [Fox  et al 2014]
   - Genetics [Ewens 1972; Hartl, Clark 2003]
-  - Newborn babies [saria et al 2010]
+  - Newborn babies [Saria et al 2010]
   - Social networks [Llyod et all 2012; Miller et al 2010]
   - Images [Sudderth, Jordan 2009]
 
-
-Nonparametric Bayes 
+## Nonparametric Bayes {#sec-NPB-nonparametric-bayes}
 
 - A theoretical motivation: De Finetti’s Theorem
 - A data sequence is infinitely exchangeable if the distribution of any N data points doesn’t change when permuted:
@@ -66,7 +47,7 @@ $$
 p(X_1, \ldots , X_N ) = p(X_{\sigma(1)} , \ldots , X_{\sigma(N)} )
 $$
 
-- De Finetti’s Theorem (roughly): A sequence is infinitely exchangeable if and only if, for all N and some distribution P
+- De Finetti’s Theorem (roughly): A sequence is infinitely exchangeable $\iff$, for all N and some distribution P
 $$
 p(X_1, \ldots , X_N ) = \int_\theta \prod_{}^N p(X_n\mid\theta)P(d\theta)
 $$
@@ -76,33 +57,15 @@ $$
   -  Priors
   -  "Nonparametric Bayesian" priors
 
-[Hewitt, Savage 1955; Aldous 1983]
+- Note: that De Finetti's proved his theorem in 1931 but for finite exchangeability.
+- In [@hewitt1955symmetric] Savage and Hewitt extended the result from finite to infinite exchangeability in 1955. 
+- There were also a few other related results by Diaconis and Freedman in the 1970s.
+- In [@aldous1983random] Aldous proved a more general for arrays 1983. 
 
-Note the statement that De Finetti's theorem wasn't proved until 1955, but the idea was around since the 1930s and he supplied a proof in 1931.
-L. J. Savage  and Hewitt extended the result from finite to infinite exchangeability in 1955. Aldous proved the result for countably infinite exchangeability in 1983.
-
-## Generative Model
+## Generative Model {#sec-NPM-generative-model}
 
 $$ 
-\underbrace{
-  \mathbb{P}r(parameters \mid data) }_{
-    \substack{
-      \text{Given the data we’ve seen} \\ 
-      \text{what do we know about } \\ 
-      \text{the underlying function?} 
-    }
-  }
-\propto 
-\underbrace{
-  \mathbb{P}r(data \mid parameters) 
-  \mathbb{P}r(parameters)}_{  
-    \substack{
-      \text{A (statistical) model} \\
-      \text{that can generate} \\
-      \text{functions and data} \\
-      \text{of interest}
-    }
-  }
+  \mathbb{P}r(parameters \mid data) \propto \mathbb{P}r(data \mid parameters) \mathbb{P}r(parameters)
 $$
 
 - Finite Gaussian mixture model (K=2 clusters)
@@ -132,9 +95,11 @@ Inference goal: assignments of data points to clusters, cluster parameters
 ## Beta distribution review
 
 \index{distribution!Beta}
+
 $$
-\text{Beta}(\rho |\alpha_1, \alpha_2) = \frac{\Gamma(\alpha_1 + \alpha_2)}{\Gamma(\alpha_1)\Gamma(\alpha_2)} \rho^{\alpha_1 - 1} (1 - \rho)^{\alpha_2 - 1} 
+\text{Beta}(\rho \mid \alpha_1, \alpha_2) = \frac{\Gamma(\alpha_1 + \alpha_2)}{\Gamma(\alpha_1)\Gamma(\alpha_2)} \rho^{\alpha_1 - 1} (1 - \rho)^{\alpha_2 - 1} 
 $$
+
 -  $\alpha_1, \alpha_2 > 0$
 -  $\rho \in [0,1]$
 
@@ -157,31 +122,31 @@ $$
 
 
 $$
-p(\rho_1 , z) \propto \rho_1^{\mathbb{1}_{z=1-1}} (1 - \rho_1 )^{\mathbb{1}_{z=2}-1} \propto \text{Beta}(\rho_1 | a_1 + \mathbb{1}_{z=1}, a_2 + \mathbb{1}_{z=2})
+p(\rho_1 , z) \propto \rho_1^{\mathbb{1}_{z=1-1}} (1 - \rho_1 )^{\mathbb{1}_{z=2}-1} \propto \text{Beta}(\rho_1 \mid a_1 + \mathbb{1}_{z=1}, a_2 + \mathbb{1}_{z=2})
 $$
 
 ## Generative Model
 
 $$ 
-\underbrace{
-  \mathbb{P}r(parameters \mid data) }_{
-    \substack{
-      \text{Given the data we’ve seen} \\ 
-      \text{what do we know about } \\ 
-      \text{the underlying function?} 
-    }
-  }
-\propto 
-\underbrace{
-  \mathbb{P}r(data \mid parameters) 
-  \mathbb{P}r(parameters)}_{  
-    \substack{
-      \text{A (statistical) model} \\
-      \text{that can generate} \\
-      \text{functions and data} \\
-      \text{of interest}
-    }
-  }
+  \mathbb{P}r(parameters \mid data) \propto \mathbb{P}r(data \mid parameters) \mathbb{P}r(parameters)
 $$
 
 ## Dirichlet distribution review
+
+$$
+\text{Dirichlet}(\rho \mid \alpha_1, \ldots , \alpha_K) = \frac{\Gamma(\sum_{k=1}^K \alpha_k)}{\prod_{k=1}^K \Gamma(\alpha_k)} \prod_{k=1}^K \rho_k^{\alpha_k - 1} \qquad a_k>0
+$$
+
+- what happen when $a=a_1=a_K=1$?
+- what happen when $a=a_1=a_K \to 0$?
+- what happen when $a=a_1=a_K \to \infty$?
+
+$$
+\rho_{1:K} \sim \textrm{Dirichlet}(a_{1:K}) \quadz\sim \textrm{Cat}(\rho_{1:K})
+$$
+
+$$
+\rho_{1:K}|z \stackrel{d}{=} \textrm{Dirichlet}(a_{1:K}) \quad a'_k= a_k + \mathbb{1}_{\{z=k\}} 
+$$
+
+- what happen when $a_1 > a_2
