--- a/C6-L01.qmd
+++ b/C6-L01.qmd
@@ -20,6 +20,7 @@ the following material is based on the [Gaussian Processes for Regression](https
 
 ## Why GPs
 
+<!--
 ::: {#fig-nonparametrics-gps_1 .column-margin  group="slides" width="53mm"}
 ![why GP1](C6-SL01.png)
 
@@ -33,6 +34,7 @@ ocean current vector field [Ryan, Özgökmen 2023; Zewe 2023; Gonçalves et al 2
 rocket booster surrogate model [Gramacy,Lee 2008] [Gramacy 2020]
 :::
 
+-->
 
 - Why Gaussian processes (GPs)?
 - Example 1:
@@ -394,9 +396,9 @@ $$
   - Can compute mean ($\color{blue}M\times 1$) & covariance ($\color{blue}M\times M$) in closed form with Gaussian facts
 
 $$
-\begin{align*}
+\begin{aligned}
 k(x, x') = \sigma^2 \exp\left(-\tfrac{1}{2}(x - x')^2\right), \sigma^2 = 1
-\end{align*}
+\end{aligned}
 $$
 
 Now we can flip this around using the Bayesian machinery and use that to get information. When we don't know the function, but we do know the data, which is real life. In real life You know the data, but you don't know the function and you're trying to learn that direction.
@@ -498,9 +500,9 @@ What if we happened to measure our data on a different scale?
 We've been using this particular kernel:
 
 $$
-\begin{align*}
-k(x, x') = \sigma^2 \exp\left(-\tfrac{1}{2}(x - x')^2\right), \sigma^2 = 1
-\end{align*}
+\begin{aligned}
+k(x, x') &= \sigma^2 \exp\left(-\tfrac{1}{2}(x - x')^2\right), \sigma^2 = 1
+\end{aligned}
 $$
 
   - What do we expect from the scale of $f(x)$ a priori?
