--- a/C5-L03.qmd
+++ b/C5-L03.qmd
@@ -25,6 +25,15 @@ Unfortunately the course was missing the video with the derivation of the full c
 
 ![full posterior distribution](images/C5-L3-SL00.png){#fig-capstone-lm-predictive .column-margin group="slides" width="53mm"}
 
+$$
+\begin{split}
+Pr(\omega,\beta,L,\nu|y) &\propto \prod_{k=1}^K  \\
+   & \prod_{t:L_t=k} \mathcal{N}(y_t|f_t^\top \beta_k,L,\nu)  \\
+   & \prod_{k=1}^K \omega_k^{\sum_{t=1}^T \mathbb{I}_{(L_t=k)}} \\
+   & \prod_{k=1}^K \mathcal{N}(\beta\mid m_\nu) \mathcal{IG}(\nu|a_\nu,b_\nu)
+\end{split}
+$$ {#eq-capstone-lm-full-conditional}
+
 
 ![full posterior distribution](images/C5-L3-SL00-code.png){#fig-capstone-lm-predictive-code .column-margin group="slides" width="53mm"}
 
