--- a/C3-L02.qmd
+++ b/C3-L02.qmd
@@ -35,8 +35,7 @@ $$ {#eq-finite-mixture-cdf-hierarchical-2}
 where $g_k(x)$ is the cumulative distribution function of the $k$-th component of the mixture.
 
 
-### Sample code for simulating from a Mixture Model
-
+### Code for simulating from a Mixture Model :notebook: $\mathcal{R}$ :snake:
 
 ::: {.panel-tabset}
 
@@ -66,7 +65,7 @@ plot(xx, yy, type="l", ylab="Density", xlab="x", las=1, lwd=2)
 points(x, y=rep(0,n), pch=1, col=cc)
 ```
 
-## python
+## Python
 
 ```{python}
 #| label: generate-mixture-python
@@ -105,12 +104,7 @@ plt.show()
 
 :::
 
-## The Likelihood function
-
-![observed data likelihood](images/c3l01-ss-10-mixtures-observed-likelihood.png){#fig-observed-data-likelihood .column-margin width="53mm"} 
-
-
-![complete data likelihood](images/c3l01-ss-11-mixtures-complete-data-likelihood.png){#fig-complete-data-likelihood .column-margin width="53mm"}
+## The Likelihood function :movie_camera: {#sec-likelihood-function}
 
 
 - we are now moving on to inferring the parameters of the mixture model from the observed data. 
@@ -121,9 +115,46 @@ plt.show()
     -   the **observed data likelihood** is the probability of observing the data given the parameters of the model.
     -   the **complete data likelihood** is the probability of observing the data and the latent variables given the parameters of the model.
 
+### Observed data likelihood
 
 
-## Parameter identifiability
+![observed data likelihood](images/c3l01-ss-10-mixtures-observed-likelihood.png){#fig-observed-data-likelihood .column-margin width="53mm"} 
+
+
+
+
+$$
+\mathbf{x} = x_1, \ldots, x_n \implies \text{the collected observations}
+$$ {#eq-observed-data}
+
+The observation $\mathbf{x}$, are independent and identically distributed (i.i.d.) samples from the mixture distribution. We model them using a mixture as we have seen before in @eq-finite-mixture-cdf-hierarchical-2.
+
+$$
+\mathbf{x} \sim f(\mathbf{x} ) = \sum_{k=1}^K w_k \cdot g_k(x_i \mid \theta)
+$$ {#eq-finite-mixture-likelihood}
+
+- where:
+  - $\omega_k$ is the weights of the $k$^th^ mixture components,
+  - $g_k(x_i \mid \theta)$ is the probability density function of the $k$^th^ mixture component, and 
+  - $\boldsymbol{\theta}$ are the parameters of the components.
+
+The **observed data likelihood** is the probability of observing the data given the parameters of the model
+
+$$
+\mathcal{L}(\boldsymbol{\omega},\boldsymbol{\theta} \mid  \mathbf{x}) = \prod_{i=1}^n \sum_{k=1}^K w_k \cdot g_k(x_i \mid \theta)
+$$ {#eq-observed-data-likelihood}
+
+- where 
+  - $g_k(x_i \mid \theta)$ is the probability density function of the $k$-th component of the mixture, with 
+  - $\boldsymbol{\omega}$ are the weights of the mixture components.
+  - $\boldsymbol{\theta}$ are the parameters of the components.
+
+### Complete data likelihood
+
+![complete data likelihood](images/c3l01-ss-11-mixtures-complete-data-likelihood.png){#fig-complete-data-likelihood .column-margin width="53mm"}
+
+
+## Parameter identifiability :movie_camera: {#sec-parameter-identifiability}
 
 ![Identifiability - Label switching](images/c3l01-ss-12-identifiability-label-switching.png){#fig-identifiability-label-switching .column-margin width="53mm"}
 
@@ -144,6 +175,6 @@ Question: Is there a "Canonical representation" which fixes this, essentially a 
 1. picking the representation with the least components (no zero weights)\
 2. ordered with descending $w_i$
 
-### Label switching
+### Label switching 
 
 The labels used to distinguish the components in the mixture are not identifiable. The literature sometimes refers to this type of lack of identifiability as the label switching "problem". Whether label switching is an actual problem or not depends on the computational algorithm being used to fit the model, and the task we are attempting to complete in any particular case. For example, label switching tends to not be an issue for the purpose of density estimation or classification problems, but it can lead to serious difficulties in clustering problems.
