--- a/C3-L04.qmd
+++ b/C3-L04.qmd
@@ -10,8 +10,6 @@ keywords:
   - notes
 ---
 
-# MCMC algorithm for Mixture Models
-
 \index{mixture!MCMC algorithm}
 Markov chain Monte Carlo (MCMC) algorithm are typically used to perform Bayesian inference in complex models. 
 In MCMC algorithms we repeatedly sample from the full conditional distributions of each block of parameters given fixed values for the rest. 
@@ -28,13 +26,11 @@ After an appropriate burn-in period, they generate samples that are dependent bu
 ::: {.callout-tip}
 ## Notation
 
-1. under tildes signify a vector or collection.
+1. under-tildes signify a vector or collection.
 2. $\{i:c_i=l\}$ mean the sum over the indices for a specific component $k$. We are regrouping the rows by their components
 3. The double product mean we are iterating over the data rows times their likelihoods. (as usual)
 4. The indicator in the exponent mean we are only taking one term per row which is picked using the component for which the latent indicator is true.
-
 :::
-
 
 
 The model takes the form :
@@ -47,7 +43,7 @@ The model is defined by the parameters $\theta = (\theta_1, \ldots, \theta_K)$ a
 In the Bayesian setting we also need priors for the weights and the parameters of each components.
 
 $$
-(w_1, \ldots, w_K) \sim Dirichlet(\alpha_1, \ldots, \alpha_K) \qquad \mathbb{E}[w_k] = \frac{\alpha_k}{\sum_{k=1}^K \alpha_k}
+(w_1, \ldots, w_K) \sim \textrm{Dirichlet}(\alpha_1, \ldots, \alpha_K) \qquad \mathbb{E}[w_k] = \frac{\alpha_k}{\sum_{k=1}^K \alpha_k}
 $$ {#eq-parameter-prior}
 
 also if we use $a_1 = a_2 = ... a_k=1$ we end up with a uniform prior on the simplex.
