--- a/C3-L07.qmd
+++ b/C3-L07.qmd
@@ -10,6 +10,8 @@ keywords:
   - Notes
 ---
 
+## Classification with Mixture Models 🎥 {#sec-classification-mixture-models
+}
 [**Classification** is *a supervised learning problem where we want to predict the class of a new observation based on its features*.]{.mark}
 
 According to the instructor the main difference from clustering is that in classification we have a training set. I would think the main difference is that we have labels for some of the data, while in clustering we do not have labels at all.
