--- a/C5-L03.qmd
+++ b/C5-L03.qmd
@@ -32,8 +32,8 @@ $$
     \prod_{t:L_t=k} \mathcal{N}(y_t \mid f_t^\top \beta_k,\nu)  
     }_{
     \text{Likelihood of the data }  \mid \theta
-    }
-  \underbrace{
+    }\\
+  &\quad \qquad \underbrace{
     \prod_{k=1}^K \omega_k^{\sum_{t=1}^T \mathbb{1}_{(L_t=k)}} 
     \prod_{k=1}^K \omega_k^{a_k-1} 
   }_{
@@ -43,8 +43,8 @@ $$
     \prod_{k=1}^K \mathcal{N}(\beta_k \mid m_0, \nu C_0) 
     }_{
       \text{Prior for the AR coefficients}
-  }
-  \underbrace{
+  }\\
+  &\quad \qquad \underbrace{
       \mathcal{IG}(\nu \mid \frac{n_0}{2},\frac{d_0}{2})
   }_{
     \text{Prior for the variance }\nu
@@ -68,19 +68,19 @@ $$
     \prod_{t:L_t=k} \mathcal{N}(y_t \mid f_t^\top \beta_k,\nu)  
     }_{
     \text{Likelihood of the data }  \mid \theta
-    }
-  \underbrace{
+    }\\
+  &\quad \qquad \underbrace{
     \prod_{k=1}^K \omega_k^{\sum_{t=1}^T \mathbb{1}_{(L_t=k)}} 
     \prod_{k=1}^K \omega_k^{a_k-1} 
   }_{
     \text{Prior for the weights }\omega
-    }
-  \underbrace{
+    }\\
+  &\quad \qquad \underbrace{
     \prod_{k=1}^K \mathcal{N}(\beta_k \mid m_0, \nu C_0) 
     }_{
       \text{Prior for the AR coefficients}
-  }
-  \underbrace{
+  }\\
+  &\quad \qquad \underbrace{
       \mathcal{IG}(\nu \mid \frac{n_0}{2},\frac{d_0}{2})
   }_{
     \text{Prior for the variance }\nu
@@ -97,18 +97,19 @@ $$
     \prod_{t:L_t=k} \mathcal{N}(y_t \mid f_t^\top \beta_k,\nu)  
     }_{
     \text{Likelihood of the data }  \mid \theta
-    }
-  \underbrace{
+    }\\
+  &\quad \qquad \underbrace{
     \color{blue}\prod_{k=1}^K \omega_k^{\sum_{t=1}^T \mathbb{1}_{(L_t=k)}} 
     \color{blue}\prod_{k=1}^K \omega_k^{a_k-1} 
   }_{
     \text{Prior for the weights }\omega
-    }
-  \underbrace{
+    }\\
+  &\quad \qquad   \underbrace{
     \prod_{k=1}^K \mathcal{N}(\beta_k \mid m_0, \nu C_0) 
     }_{
       \text{Prior for the AR coefficients}
-  }
+  }\\
+  &\quad \qquad 
   \underbrace{
       \mathcal{IG}(\nu \mid \frac{n_0}{2},\frac{d_0}{2})
   }_{
@@ -326,8 +327,6 @@ nu.cur=1             # <8>
 3. L will be a vector of length n, and there is one column per iteration.
 4. The weights omega will be a vector of length K, and there is one column per iteration.
 5. We init $\beta$ as 0 which means we assume all coefficients are 0 at the beginning. 
-   - Note that this is not a strong assumption, as we will update it in the Gibbs sampler.
-   - The coefficients will be updated in each iteration based on the current value of $L$.
 6. We init $L$ as 1, which means we assume all observations are from the first component at the beginning.
 7. We init the weights equally as 1/K, the number components,
 8. We init the variance $\nu$ as 1
