mixtures removed duplicate section and cleaned up heading and hierarchy.

--- a/C3-L02.qmd
+++ b/C3-L02.qmd
@@ -10,7 +10,8 @@ keywords:
 
 ## Hierarchical representations 🎥 {#sec-hierarchical-representation}
 
-![Hierarchical representation of a mixture](images/c3l01-ss-08-mixtures-heirarchial-representation.png){#fig-hierarchical-representation-of-a-mixture .column-margin width="53mm"}
+![Hierarchical representation of a mixture](images/c3l01-ss-08-mixtures-hierarchial-representation.png){#fig-hierarchical-representation-of-a-mixture .column-margin width="53mm"}
+
 
 
 ![simulation of a mixture](images/c3l01-ss-09-mixture-simulation.png){#fig-simulation-of-a-mixture .column-margin width="53mm"}
@@ -29,10 +30,16 @@ where $C$ is a categorical random variable with $K$ categories, and $G_k(x \mid 
 This allows us to write the cumulative distribution function of the mixture as a weighted sum of the cumulative distribution functions of the components 
 
 $$
-\mathbb{P}r(x) = \sum^K_{k=1} \mathbb{P}r(x \mid C=k) \cdot \mathbb{P}r(C=k) = \sum^K_{k=1} g_k(x) \cdot \omega_k \qquad
-$$ {#eq-finite-mixture-cdf-hierarchical-2}
+\begin{split}
+\mathbb{P}r(x) &= \sum^K_{k=1} \mathbb{P}r(x \mid C=k) \cdot \mathbb{P}r(C=k)  \\
+               &= \sum^K_{k=1} g_k(x) \cdot \omega_k \qquad
+\end{split}
+$$ {#eq-mixture-marginal-cdf}
 
-where $g_k(x)$ is the cumulative distribution function of the $k$-th component of the mixture.
+- where
+  - $g_k(x)$ is the cumulative distribution function of the $k$^th^ component of the mixture.
+  - $\omega_k$ is the weight of the $k$^th^ component of the mixture, and
+  - $C$ is a categorical random variable with $K$ categories, and $\mathbb{P}r(C=k) = \omega_k$ is the probability of selecting the $k$^th^ component of the mixture.
 
 
 ### Code for simulating from a Mixture Model :notebook: $\mathcal{R}$ :snake:
@@ -107,11 +114,11 @@ plt.show()
 ## The Likelihood function :movie_camera: {#sec-likelihood-function}
 
 
-- we are now moving on to inferring the parameters of the mixture model from the observed data. 
-- we can estimate these using the maximum likelihood estimation or with Bayesian estimation. 
-- in both cases we will need to compute the likelihood of the observed data.
+- We are now moving on to inferring the parameters of the mixture model from the observed data.
+- We can estimate these using the maximum likelihood estimation or with Bayesian estimation.
+- In both cases we will need to compute the likelihood of the observed data.
 
--   there are two types of likelihoods:
+-   There are two types of likelihoods:
     -   the **observed data likelihood** is the probability of observing the data given the parameters of the model.
     -   the **complete data likelihood** is the probability of observing the data and the latent variables given the parameters of the model.
 
@@ -152,6 +159,8 @@ $$ {#eq-observed-data-likelihood}
 ### Complete data likelihood
 
 ![complete data likelihood](images/c3l01-ss-11-mixtures-complete-data-likelihood.png){#fig-complete-data-likelihood .column-margin width="53mm"}
+
+
 
 
 ## Parameter identifiability :movie_camera: {#sec-parameter-identifiability}
