--- a/C3-L01.qmd
+++ b/C3-L01.qmd
@@ -89,10 +89,12 @@ We will write $G_k(x) = G_k (x \mid \theta_k )$ whenever it is necessary to high
 
 It is often the case that $G_1, \ldots, G_K$ all belong to the same family and differ only in the value parameters associated with each of the distributions, so that $G_k (x \mid \theta_k ) = G(x \mid \theta_k )$. In that case, the function $G$ (and sometimes its density/probability mass function $g$) are called the "kernel" of the mixture.
 
-::: #exm-exponential-mixture
+::: {#exm-exponential-mixture}
 ## Three component Exponential mixture
 
-For example, we could define a mixture with $K = 3$ components, with $G(x \mid \theta_1 )$, $G(x \mid \theta_2 )$ and $G(x \mid \theta_3 )$ all corresponding to exponential distributions with means $\theta_1$ , $\theta_2$ and $\theta_3$ respectively.
+- For example, we could define a mixture with
+  - $K = 3$ components,
+  - with $G(x \mid \theta_1 )$, $G(x \mid \theta_2 )$ and $G(x \mid \theta_3 )$ all corresponding to exponential distributions with means $\theta_1$ , $\theta_2$ and $\theta_3$ respectively.
 
 In that case, the cumulative distribution function of the mixture is given by
 
@@ -183,15 +185,15 @@ The variance of a mixture is not as straightforward to compute, as it involves t
 
 
 
-
-## Mixtures of Gaussians :video {#sec-mixture-gaussians}
+## Mixtures of Gaussians :movie_camera: {#sec-mixture-gaussians}
 
 Here we will look at a few examples of mixtures of Gaussians which display different properties not available in a single Gaussian distribution. The video mostly walks through the code examples given in the readings below, while pointing out the features each of these mixtures possess that are not available in a single Gaussian distribution.
 
-## Example of a Bimodal mixture of Gaussians 
+
+## Example of a Bimodal mixture of Gaussians :spiral_notepad: $\mathcal{R}$ :snake: {#sec-mixture-bimodal-gaussian-mix}
 
 ::: {#exm-bimodal-mixture .panel-tabset}
-## R
+### R
 
 ```{r}
 #| label: fig-Mixture-Gaussians-bimodal-R
@@ -208,7 +210,7 @@ plot(x, y, type="l", ylab="Density", las=1, lwd=2)
 title("Bimodal Mixture of Gaussians")
 ```
 
-## Python
+### Python
 
 ```{python}
 #| label: fig-Mixture-Gaussians-bimodal-python
@@ -242,16 +244,19 @@ plt.close()
 ```
 :::
 
-### Example of a Uni-modal and skewed mixture of Gaussians
+
+## Example of a Uni-modal and skewed mixture of Gaussians :spiral_notepad: $\mathcal{R}$ :snake: {#sec-mixture-skewed-gaussian-mix}
+
 
 $$
 f(x) = 0.55 \times \mathcal{N}(0, 2) + 0.45 \times \mathcal{N}(3, 4) \qquad
 $$ {#eq-uni-modal-skewed-gaussian-mixture-pdf}
 
 
+
 ::: {#exm-uni-modal-skewed-mixture .panel-tabset}
 
-## R
+### R
 
 ```{r}
 #| label: fig-Mixture-Gaussians-skewed
@@ -263,7 +268,7 @@ par(mar=c(4,4,1,1)+0.1)
 plot(x, y, type="l", ylab="Density", las=1, lwd=2)
 ```
 
-## python
+### Python
 
 ```{python}
 #| label: fig-Mixture-Gaussians-skewed-python
@@ -292,10 +297,10 @@ plt.title('Mixture of two Gaussians Skewed')
 plt.show()
 plt.close()
 ```
-
 :::
 
-### Example of a Uni-modal, symmetric and heavy tailed mixture of Gaussians
+
+## Example of a Uni-modal, symmetric and heavy tailed mixture of Gaussians :spiral_notepad: $\mathcal{R}$ :snake: {#sec-mixture-heavy-tailed-symmetric-gaussian-mix}
 
 
 $$
@@ -304,8 +309,7 @@ $$ {#eq-unimodal-heavy-tailed-gaussian-mixture-pdf}
 
 
 ::: {#exm-heavy-tailed-mixture .panel-tabset}
-
-## R
+### R
 
 ```{r}
 #| label: lst-gen-Mixture-Gaussians-heavy-tail
@@ -329,7 +333,7 @@ lines(x, z, lty=2, lwd=2)
 legend(2, 0.16, c("Mixture","Gaussian"), lty=c(1,2), bty="n", cex=0.77, lwd=c(2,2))
 ```
 
-## python
+### Python
 
 ```{python}
 #| label: lst-sim-normal-heavy-tail-mix-python
@@ -372,7 +376,8 @@ plt.close()
 ```
 :::
 
-## Zero Inflated Mixtures
+
+## Zero Inflated Mixtures :movie_camera: {#sec-zero-inflated-mixtures}
 
 -   Zero inflated distributions are useful for modeling data with excess zeros (often in term of count data).
 - We learned in course 1 & 2 that the negative binomial or equivalent beta are zero inflated in comparison to the Poisson distribution. 
@@ -386,7 +391,8 @@ Note there are two approaches to zero inflation:
 1. one step models like the negative binomial.
 1. hurdle models - two step models where we first model the zero inflation and then the count data - This corresponds to the hierarchical representation of the mixture model.
 
-### Example of a Zero-inflated log Gaussian distribution
+
+## Example of a Zero-inflated log Gaussian distribution :spiral_notepad: $\mathcal{R}$ :snake: {#sec-zero-inflated-log-gaussian-mix}
 
 This is a mixture of a point mass at zero and a log Gaussian distribution. This corresponds to the example where we have a light bulb factory and we want to model the time to failure of the light bulbs. We know that for the defective light bulbs, the time to failure is zero. For the non-defective light bulbs, the time to failure is log normally distributed with mean 1.5 and standard deviation 0.5
 
@@ -395,7 +401,7 @@ f(x) = 0.3 \times \mathbb{I}_{x\ge0} + 0.7 \times \mathcal{LN}(1.5, 0.5) \qquad
 $$ {#eq-zero-inflated-log-gaussian-pdf}
 
 ::: {#exm-zero-inflated-log-normal-mix .panel-tabset}
-## R
+### R
 
 ```{r}
 #| label: lbl-Zero-inflated-log-Gaussian-R
@@ -418,7 +424,7 @@ legend(4, 0.45, c("Zero infla. log Gaussian","log Gaussian"),
      lty=c(1,2), bty="n", lwd=c(2,2))
 ```
 
-## python
+### Python
 
 ```{python}
 #| label: lbl-Zero-inflated-log-Gaussian-py
@@ -455,9 +461,11 @@ plt.title('Zero-inflated continuous distribution')
 plt.legend(['Log gaussian', 'Zero infla. Log gaussian'])
 plt.show()
 ```
-:::
 
-### Example of a zero-inflated negative binomial distribution
+###
+
+
+## Example of a zero-inflated negative binomial distribution :spiral_notepad: $\mathcal{R}$ :snake: {#sec-zero-inflated-neg-bin-mix}
 
 
 $$
@@ -466,7 +474,7 @@ $$ {#eq-zero-inflated-negative-binomial-pdf}
 
 
 ::: {#exm-zero-inflated-neg-bin-mix .panel-tabset}
-## R
+### R
 
 ```{r}
 #| label: fig-Zero-inflated-negative-binomial-R
@@ -485,7 +493,7 @@ barplot(z, names.arg=x, las=1, xlab = "x", ylab="Probability",
         border=NA, main="Zero-inflated Negative Binomial")
 ```
 
-## python
+### Python
 
 ```{python}
 #| label: fig-Zero-inflated-negative-binomial-python
@@ -524,156 +532,7 @@ plt.show()
 ```
 :::
 
-## Hierarchical representations :movie_camera: {#sec-mixtures-hierarchical-representation}
-
-![Hierarchical representation of a mixture](images/c3l01-ss-08-mixtures-heirarchial-representation.png){#fig-hierarchical-representation-of-a-mixture .column-margin width="53mm"}
-
-
-
-
-![simulation of a mixture](images/c3l01-ss-09-mixture-simulation.png){#fig-simulation-of-a-mixture .column-margin width="53mm"}
-
-
-
-
-Recall that the cumulative distribution function of a mixture takes the form @eq-finite-mixture-cdf, where $G_k(x)$ is the cumulative distribution function of the $k$-th component of the mixture. 
-
-We can use a RV for each component and introduce an indicator RV for  the component selector $C_i$ to select the component from which we will sample. This results in a hierarchical representation of the mixture model.
-
-$$
-X \mid c \sim g_c(x) \qquad \mathbb{P}r(c=k) = \omega_k \qquad
-$$ {#eq-finite-mixture-cdf-hierarchical}
-
-where $C$ is a categorical random variable with $K$ categories, and $G_k(x \mid C=k)$ is the cumulative distribution function of the $k$-th component of the mixture given that we have selected the $k$-th component.
-
-This allows us to write the cumulative distribution function of the mixture as a weighted sum of the cumulative distribution functions of the components 
-
-$$
-\mathbb{P}r(x) = \sum^K_{k=1} \mathbb{P}r(x \mid C=k) \cdot \mathbb{P}r(C=k) = \sum^K_{k=1} g_k(x) \cdot \omega_k \qquad
-$$ {#eq-finite-mixture-cdf-hierarchical-2}
-
-where $g_k(x)$ is the cumulative distribution function of the $k$-th component of the mixture.
-
-
-
-
-## Sample code for simulating from a Mixture Model :spiral_notepad: $\mathcal{R}$ :snake: 
-
-
-::: {.panel-tabset}
-
-## R
-
-```{r}
-#| label: lst-simulate-two-gaussian-mixture-R
-
-# Generate n observations from a mixture of two Gaussian distributions
-n     = 50           # required sample size
-w     = c(0.6, 0.4)  # mixture weights
-mu    = c(0, 5)      # list of means
-sigma = c(1, 2)      # list of sds
-cc    = sample(1:2, n, replace=T, prob=w) # sample for the component selector
-x     = rnorm(n, mu[cc], sigma[cc]) # sample the selected component
-```
-
-```{r}
-#| label: fig-two-gaussian-mixture-R-plot
-#| fig-cap: "Mixture of two Gaussians"
-
-# Plot f(x) along with the observations just sampled
-xx = seq(-5, 12, length=200)
-yy = w[1] * dnorm(xx, mu[1], sigma[1]) + w[2] * dnorm(xx, mu[2], sigma[2])
-par(mar=c(4,4,1,1)+0.1)
-plot(xx, yy, type="l", ylab="Density", xlab="x", las=1, lwd=2)
-points(x, y=rep(0,n), pch=1, col=cc)
-```
-
-## python
-
-```{python}
-#| label: generate-mixture-python
-
-import numpy as np
-import matplotlib.pyplot as plt
-import scipy.stats as stats
-from scipy.stats import norm
-
-n=50           # required sample size
-w=[0.6, 0.4]  # mixture weights
-mu=[0, 5]      # list of means
-sigma=[1, 2]  # list of sds
-cc = np.random.choice([0, 1], size=n, p=w) # sample for the component selector
-# sample the selected component
-x = np.array([np.random.normal(mu[i], sigma[i]) for i in cc])
-
-```
-
-```{python}
-#| label: fig-generate-mixture-python-plot
-#| fig-cap: "Mixture of two Gaussians"
-
-# Plot f(x) along with the observations just sampled
-xx = np.linspace(-5, 12, num=200)
-yy = w[0]*norm.pdf(loc=mu[0], scale=sigma[0], x=xx) + \
-     w[1]*norm.pdf(loc=mu[1], scale=sigma[1], x=xx)
-plt.plot(xx, yy, label='Mixture of Gaussians')
-plt.scatter(x, np.zeros(n), c=cc, label='Sampled data')
-plt.xlabel('x')
-plt.ylabel('Density')
-plt.title('Mixture of Gaussians')
-plt.legend()
-plt.show() 
-```
 
 :::
 
-## The Likelihood function :movie_camera:
 
-![observed data likelihood](images/c3l01-ss-10-mixtures-observed-likelihood.png){#fig-observed-data-likelihood .column-margin width="53mm"} 
-
-
-![complete data likelihood](images/c3l01-ss-11-mixtures-complete-data-likelihood.png){#fig-complete-data-likelihood .column-margin width="53mm"}
-
-
-
-
-- we are now moving on to inferring the parameters of the mixture model from the observed data. 
-- we can estimate these using the maximum likelihood estimation or with Bayesian estimation. 
-- in both cases we will need to compute the likelihood of the observed data.
-
--   there are two types of likelihoods:
-    -   the **observed data likelihood** is the probability of observing the data given the parameters of the model.
-    -   the **complete data likelihood** is the probability of observing the data and the latent variables given the parameters of the model.
-
-
-
-## Parameter identifiability :movie_camera:
-
-![Identifiability - Label switching](images/c3l01-ss-12-identifiability-label-switching.png){#fig-identifiability-label-switching .column-margin width="53mm"}
-
-
-
-
-![identifiability - split weights](images/c3l01-ss-13-identifiability-split-weights.png){#fig-identifiability-split-weights .column-margin width="53mm"}
-
-
-
-
-![identifiability - zero weights](images/c3l01-ss-14-identifiability-zero-weight.png){#fig-identifiability-zero-weight .column-margin width="53mm"}
-
-
-
-
-A probability model is identifiable if and only if different values of the parameters generate different probability distributions of the observable variables.
-
-One challenge involved in working with mixture models is that they are not fully identifiable.
-
-The problem is that different representations exists for the same mixture.
-
-Question: Is there a "Canonical representation" which fixes this, essentially a convention like:\
-1. picking the representation with the least components (no zero weights)\
-2. ordered with descending $w_i$
-
-### Label switching
-
-The labels used to distinguish the components in the mixture are not identifiable. The literature sometimes refers to this type of lack of identifiability as the label switching "problem". Whether label switching is an actual problem or not depends on the computational algorithm being used to fit the model, and the task we are attempting to complete in any particular case. For example, label switching tends to not be an issue for the purpose of density estimation or classification problems, but it can lead to serious difficulties in clustering problems.
